[package]
name = "webtest"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
implicit-clone = { version = "0.6.0", features = ["indexmap"] }
yew-router = "0.18"
pulldown-cmark = "0.13"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
